--- a/django-app/templates/tambah_barang.html
+++ b/django-app/templates/tambah_barang.html
@@ -9,51 +9,10 @@
             <h2 class="text-center text-2xl font-bold tracking-wide text-gray-800">Tambah Barang</h2>
             <form action="" method="post" class="my-8 text-sm">
               {% csrf_token %}
-              <div class="flex flex-col my-4">
-                <label for="name" class="text-gray-700">Kode Barang</label>
-                <input type="text" name="name" id="name"
-                  class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900"
-                  placeholder="Masukkan Kode Barang">
-              </div>
-    
-              <div class="flex flex-col my-4">
-                <label for="nama" class="text-gray-700">Nama</label>
-                <input type="text" name="email" id="email"
-                  class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900"
-                  placeholder="Masukkan Nama Barang">
-              </div>
-
-              <div class="flex flex-col my-4">
-                <label for="stok" class="text-gray-700">Stok</label>
-                <input type="text" name="email" id="email"
-                  class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900"
-                  placeholder="Masukkan Stok">
-              </div>
-
-              <div class="flex flex-col my-4">
-                <label for="harga" class="text-gray-700">Harga</label>
-                <input type="text" name="email" id="email"
-                  class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900"
-                  placeholder="Masukkan Harga">
-              </div>
-
-              <div class="flex flex-col my-4">
-                <label for="link" class="text-gray-700">link gambar</label>
-                <input type="text" name="email" id="email"
-                  class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900"
-                  placeholder="Masukkan gambar">
-              </div>
-  
-              <div class="flex flex-col my-4">
-                <label for="jenis" class="text-gray-700">Jenis ID</label>
-                <input type="text" name="email" id="email"
-                  class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900"
-                  placeholder="Masukkan Jenis ID">
-              </div>
+              {{ form.as_p }}            
     
               <div class="my-4 flex items-center justify-end space-x-4">
-                <button
-                  class="bg-blue-600 hover:bg-blue-700 rounded-lg px-8 py-2 text-gray-100 hover:shadow-xl transition duration-150 uppercase">Tambah</button>
+                <button class="bg-blue-600 hover:bg-blue-700 rounded-lg px-8 py-2 text-gray-100 hover:shadow-xl transition duration-150 uppercase" type="submit">Tambah</button>
               </div>
             </form>
           </div>
