--- a/django-app/templates/base.html
+++ b/django-app/templates/base.html
@@ -146,6 +146,7 @@
 
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </body>
 
