--- a/django-app/templates/tampil_brg.html
+++ b/django-app/templates/tampil_brg.html
@@ -1,45 +1,93 @@
 {% extends 'base.html' %}
 {% block content %}
-  <div class="px-6 pt-6 2xl:container">
-    <section class="container px-4 mx-auto">
-        <label for="name" class="text-gray-700">Daftar Barang</label>
-        <table class="min-w-full divide-y mt-4 divide-gray-200 light:divide-gray-700">
-            <thead>
-              <tr>
-                <th>Kode Barang</th>
-                <th>Nama</th>
-                <th>Stok</th>
-                <th>Harga</th>
-                <th>Link Gambar</th>
-                <th>Jenis</th>
-                <th>aksi</th>
-              </tr>
-            </thead>
-            
-            <tbody>
-                {% for Barang in barangs %}
-              <tr>
-                <td>{{ Barang.kodebrg }}</td>
-                <td>{{ Barang.nama }}</td>
-                <td>{{ Barang.stok }}</td>
-                <td>{{ Barang.harga }}</td>
-                <td>{{ Barang.link_gbr }}</td>
-                <td>{{ Barang.jenis_id_id }}</td>
-                <td>
-                  <button class="bg-green-700 hover:bg-green-800 text-white font-bold py-2 px-2 border border-green-700 rounded">
-                    Edit
+<div class="px-6 pt-6 2xl:container">
+  <section class="container px-4 mx-auto">
+    <label for="name" class="bg-sky-500 hover:bg-sky-700 text-white py-2 px-2 border border-sky-500 rounded">Daftar Barang</label>
+    {% for message in messages %}
+    {% if message %}
+    <div
+      class="bg-emerald-100 rounded-md border border-emerald-500 min-w-full border-emerald-500 text-emerald-700 px-4 py-3"
+      role="alert">
+      <p class="font-bold">Informational message</p>
+      <p class="text-sm">{{ message }}</p>
+    </div>
+    {% endif %}
+    {% endfor %}
+    <table class="min-w-full divide-y mt-4 divide-gray-200 light:divide-gray-700">
+      <thead>
+        <tr>
+          <th class="text-left px-4 py-2">Barang</th>
+          <th class="text-left px-4 py-2">Nama</th>
+          <th class="text-left px-4 py-2">Stok</th>
+          <th class="text-left px-4 py-2">Harga</th>
+          <th class="text-left px-4 py-2">Link Gambar</th>
+          <th class="text-left px-4 py-2">Jenis</th>
+          <th class="text-left px-4 py-2">action</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        {% for Barang in barangs %}
+        <tr>
+          <td class="border px-4 py-2">{{ Barang.kodebrg }}</td>
+          <td class="border px-4 py-2">{{ Barang.nama }}</td>
+          <td class="border px-4 py-2">{{ Barang.stok }}</td>
+          <td class="border px-4 py-2">{{ Barang.harga }}</td>
+          <td class="border px-4 py-2">{{ Barang.link_gbr }}</td>
+          <td class="border px-4 py-2">{{ Barang.jenis_id.nama}}</td>
+          <td>
+            <a href="{% url 'ubah_brg' Barang.id %}"
+              class="bg-sky-500 hover:bg-sky-700 text-white py-2 px-2 border border-sky-500 rounded">Edit</a>
+
+            <button data-modal-target="popup-modal-{{ Barang.id }}" data-modal-toggle="popup-modal-{{ Barang.id }}"
+              class="bg-red-500 hover:bg-red-700 text-white py-2 px-2 border border-red-500 rounded"
+              type="button">
+              Delete
+            </button>
+
+            <div id="popup-modal-{{ Barang.id }}" tabindex="-1"
+              class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+              <div class="relative w-full max-w-md max-h-full">
+                <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                  <button type="button"
+                    class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white"
+                    data-modal-hide="popup-modal-{{ Barang.id }}">
+                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd"
+                        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                        clip-rule="evenodd"></path>
+                    </svg>
+                    <span class="sr-only">Close modal</span>
                   </button>
-                  <button class="bg-red-700 hover:bg-red-800 text-white font-bold py-2 px-2 border border-red-700 rounded">
-                    Hapus
-                  </button>
-                  
-                </td>
-              </tr>
-              <tr>
-                 {% endfor %}
-            </tbody>
-           
-          </table>
-          {% endblock %}
-    </section>
+                  <div class="p-6 text-center">
+                    <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none"
+                      stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                    <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to
+                      delete {{ Barang.nama }}?</h3>
+                    <a href="{% url 'delete_brg' Barang.id %}"  data-modal-hide="popup-modal-{{ Barang.id }}" type="button"
+                      class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
+                      Yes, I'm sure
+                    </a>
+                    <button data-modal-hide="popup-modal-{{ Barang.id }}" type="button"
+                      class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">No,
+                      cancel</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+          </td>
+        </tr>
+        <tr>
+          {% endfor %}
+      </tbody>
+
+    </table>
+    {% endblock %}
+  </section>
 </div>
