--- a/django-app/templates/base.html
+++ b/django-app/templates/base.html
@@ -40,7 +40,7 @@
             <span class="-mr-1 font-medium">Dashboard</span>
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a href="/products" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-600 group">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path class="fill-current text-gray-300 group-hover:text-cyan-300" fill-rule="evenodd"
@@ -50,7 +50,7 @@
             </svg>
             <span class="group-hover:text-gray-700">Products</span>
           </a>
-        </li>
+        </li> -->
         <li>
           <a href="/addbrg" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-600 group">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
@@ -59,7 +59,7 @@
               <path class="fill-current text-gray-600 group-hover:text-cyan-600"
                 d="M6 12a2 2 0 012-2h8a2 2 0 012 2v2a2 2 0 01-2 2H2h2a2 2 0 002-2v-2z" />
             </svg>
-            <span class="group-hover:text-gray-700">Tambah Barang</span>
+            <span class="group-hover:text-gray-700">Add products</span>
           </a>
         </li>
         <li>
@@ -70,7 +70,27 @@
               <path class="fill-current text-gray-600 group-hover:text-cyan-600"
                 d="M6 12a2 2 0 012-2h8a2 2 0 012 2v2a2 2 0 01-2 2H2h2a2 2 0 002-2v-2z" />
             </svg>
-            <span class="group-hover:text-gray-700">Daftar Barang</span>
+            <span class="group-hover:text-gray-700">List Products</span>
+          </a>
+
+          <a href="/tambah_Kategori" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-600 group">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+              <path class="fill-current text-gray-300 group-hover:text-cyan-300" fill-rule="evenodd"
+                d="M2 6a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1H8a3 3 0 00-3 3v1.5a1.5 1.5 0 01-3 0V6z" clip-rule="evenodd" />
+              <path class="fill-current text-gray-600 group-hover:text-cyan-600"
+                d="M6 12a2 2 0 012-2h8a2 2 0 012 2v2a2 2 0 01-2 2H2h2a2 2 0 002-2v-2z" />
+            </svg>
+            <span class="group-hover:text-gray-700">Add category</span>
+          </a>
+
+          <a href="/vkategori" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-600 group">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+              <path class="fill-current text-gray-300 group-hover:text-cyan-300" fill-rule="evenodd"
+                d="M2 6a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1H8a3 3 0 00-3 3v1.5a1.5 1.5 0 01-3 0V6z" clip-rule="evenodd" />
+              <path class="fill-current text-gray-600 group-hover:text-cyan-600"
+                d="M6 12a2 2 0 012-2h8a2 2 0 012 2v2a2 2 0 01-2 2H2h2a2 2 0 002-2v-2z" />
+            </svg>
+            <span class="group-hover:text-gray-700">List category</span>
           </a>
         </li>
       </ul>
